@@ -586,7 +586,7 @@
 
 # Places to log to. Use multiple log_dest lines for multiple
 # logging destinations.
-# Possible destinations are: stdout stderr syslog topic file
+# Possible destinations are: stdout stderr syslog topic file dlt
 #
 # stdout and stderr log to the console on the named output.
 #
@@ -603,6 +603,9 @@
 # logged to, e.g. "log_dest file /var/log/mosquitto.log". The file will be
 # closed and reopened when the broker receives a HUP signal. Only a single file
 # destination may be configured.
+#
+# The dlt destination is for the automotive `Diagnostic Log and Trace` tool.
+# This requires that Mosquitto has been compiled with DLT support.
 #
 # Note that if the broker is running as a Windows service it will default to
 # "log_dest none" and neither stdout nor stderr logging is available.
